// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`focus input should show saved searches 1`] = `
<div
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "backgroundColor": "white",
      "border": "1px black solid",
      "borderRadius": "0",
      "boxShadow": "none",
      "display": "initial",
      "left": "auto",
      "maxHeight": "207px",
      "minWidth": 0,
      "overflow": "auto",
      "padding": "13px 0 0 0",
      "position": "absolute",
      "top": "48px",
    }
  }
>
  <div
    className="searchItem"
    key="21"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    saved search 21
  </div>
  <div
    className="searchItem"
    key="22"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    saved search 22
  </div>
  <div
    className="searchItem"
    key="23"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    saved search 23
  </div>
  <div
    className="searchItem"
    key="24"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    saved search 24
  </div>
  <div
    className="searchItem"
    key="25"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    saved search 25
  </div>
</div>
`;

exports[`mount snapshot 1`] = `
<Search
  history={
    Object {
      "push": [Function],
    }
  }
>
  <Autocomplete
    autoHighlight={true}
    getItemValue={[Function]}
    inputProps={Object {}}
    isItemSelectable={[Function]}
    items={
      Array [
        Object {
          "id": 21,
          "name": "saved search 21",
        },
        Object {
          "id": 22,
          "name": "saved search 22",
        },
        Object {
          "id": 23,
          "name": "saved search 23",
        },
        Object {
          "id": 24,
          "name": "saved search 24",
        },
        Object {
          "id": 25,
          "name": "saved search 25",
        },
      ]
    }
    menuStyle={
      Object {
        "backgroundColor": "white",
        "border": "1px black solid",
        "borderRadius": "0",
        "boxShadow": "none",
        "display": "initial",
        "left": "auto",
        "maxHeight": "207px",
        "overflow": "auto",
        "padding": "13px 0 0 0",
        "position": "absolute",
        "top": "48px",
      }
    }
    onChange={[Function]}
    onMenuVisibilityChange={[Function]}
    onSelect={[Function]}
    renderInput={[Function]}
    renderItem={[Function]}
    renderMenu={[Function]}
    selectOnBlur={false}
    value=""
    wrapperProps={
      Object {
        "className": "searchInputHolder",
        "style": Object {},
      }
    }
    wrapperStyle={
      Object {
        "display": "inline-block",
      }
    }
  >
    <div
      className="searchInputHolder"
      style={Object {}}
    >
      <input
        aria-autocomplete="list"
        aria-expanded={false}
        autoComplete="off"
        className="searchInput "
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Search by member"
        role="combobox"
        value=""
      />
    </div>
  </Autocomplete>
</Search>
`;

exports[`searching items array should be filtered by typed input, not case sensitive 1`] = `
<div
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "backgroundColor": "white",
      "border": "1px black solid",
      "borderRadius": "0",
      "boxShadow": "none",
      "display": "initial",
      "left": "auto",
      "maxHeight": "207px",
      "minWidth": 0,
      "overflow": "auto",
      "padding": "13px 0 0 0",
      "position": "absolute",
      "top": "48px",
    }
  }
>
  <div
    className="searchItem"
    key="2"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    cambridge Core
  </div>
  <div
    className="searchItem"
    key="5"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    cambridge University Press
  </div>
</div>
`;
